# LogiBase

./: .gitignore  CMakeLists.txt  LICENSE  README.md  android.sh  desktop.sh
src/core/: CMakeLists.txt  main.cpp
src/core/qml/: main.qml
src/core/qml/Menu/: LeftMenu.qml  menu.qrc
src/ui/: CMakeLists.txt
src/ui/qml/: ui.qrc
